<resources>
    <string name="app_name">Optical Shop</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_login">Введите логин</string>
    <string name="label_password">Введите пароль</string>
    <string name="btn_login">Войти</string>
    <string name="btn_registration">Зарегистрироваться</string>
    <string name="btn_viewGoods">Посмотреть товары в салоне оптики</string>
    <string name="btn_reception"> Прием</string>
    <string name="btn_prescription">Посмотреть выданные рецепты</string>
    <string name="btn_mapsOpticalShop">Показать салоны оптики на карте</string>
    <string name="btn_editUser">Редактировать информацию о себе</string>
    <string name="btn_logout">Выйти из аккаунта</string>
    <string name="label_inputpassword">Введите пароль</string>
    <string name="label_inputBirthdate">Введите дату рождения</string>
    <string name="label_inputPhone">Введите номер телефона</string>
    <string name="btn_continueRegistration">Сохранить изменения</string>
    <string name="title_activity_maps">Map</string>
</resources>