<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Введите ФИО" />

        <EditText
            android:id="@+id/editTextTextPersonName_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/label_inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Введите логин" />

        <EditText
            android:id="@+id/editTextTextLogin_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage|text" />

        <TextView
            android:id="@+id/label_inputpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_inputpassword" />

        <EditText
            android:id="@+id/editTextTextPassword_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/label_inputBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_inputBirthdate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate_Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:editable="false" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="birthdateClicked"
                app:srcCompat="@drawable/ic_baseline_calendar_today_24"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_inputPhone" />

        <EditText
            android:id="@+id/editTextPhone_Reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <Button
            android:id="@+id/btn_continueRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="continueRegClicked"
            android:text="@string/btn_registration" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>